# manhole-cover-api

./: .gitignore  .gitlab-ci.yml  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt  sonar-project.properties  test_main.http  token_utils.py
.github/workflows/: docker-publish.yml
defines/: AuditStatus.py  Permission.py  PictureStatus.py  __init__.py
geo_service/: __init__.py  gaode.py
handlers/: __init__.py  cover_handlers.py  file_handlers.py  geo_handlers.py  login_handlers.py  picture_handlers.py  statistics_handler.py  ticket_handlers.py  user_handlers.py
models/: Cover.py  Group.py  ModelBase.py  Picture.py  User.py  __init__.py  cover_registry.py  default_users_strict.py  engine.py  group_registry.py  picture_regiesry.py  picture_registry.py  statistics.py  user_registry.py
recognize/: TorchYolo.py  Yolo.py  __init__.py  det.py  onnx_cpu_detect.py  picture_queue.py  recognize.py  test3.py
request_models/: AddUserRequest.py  CoverInfo.py  CreateTicketRequest.py  DeleteUserRequest.py  EditCoverRequest.py  EditPasswordRequest.py  GetCoverListOptions.py  GetUserListOptions.py  LoginRequest.py  RecognizeRequest.py  UidRequest.py  UploadPictureRequest.py  UserEditRequest.py  UserResponse.py  __init__.py
services/: __init__.py  add_cover.py  add_user.py  create_ticket.py  delete_user.py  edit_cover.py  edit_user.py  generate_user_data.py  get_cover.py  get_picture.py  get_user.py  list_cover.py  list_user.py  reset_password.py  upload_picture.py
services/file_service/: FileGetter.py  FileUploader.py  __init__.py  upload_file.py
tests/: test_detect.py  test_list_cover.py
