[tool.poetry]
name = "manhole-cover-api"
version = "0.1.0.00.001"
description = ""
authors = ["Expliyh <expliyh@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
mariadb = "^1.1.9"
asyncmy = "^0.2.9"
python-multipart = "^0.0.9"
aiohttp = "^3.9.2"
pyjwt = "^2.8.0"
requests = "^2.31.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
